Minor typo - add / to end of pathname

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2293,7 +2293,7 @@ $  python init_db.py
 \begin{lstlisting}[style=DOS]
     $ vim /opt/.filetool.lst
 \end{lstlisting}
-\item Add the location of the pycrypto package folder to the end of the list of folders in ./filetool.lst (one folder per line), e.g. \emph{/usr/local/lib/python2.7/site-packages/pycrypto-2.6.1-py2.7-linux-i686.egg}
+\item Add the location of the pycrypto package folder to the end of the list of folders in ./filetool.lst (one folder per line), e.g. \emph{/usr/local/lib/python2.7/site-packages/pycrypto-2.6.1-py2.7-linux-i686.egg/}
 \item Run the filetool.sh script, e.g.
 \begin{lstlisting}[style=DOS]
     $ filetool.sh -b
