Fix Crypto import

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2280,7 +2280,7 @@ $  python init_db.py
     $ sudo su
     # easy_install pycrypto-2.6.1-py2.7-linux-i686.egg
     # exit
-    $ python -c "import Crypt"
+    $ python -c "import Crypto"
     $
 \end{lstlisting}
 
