--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1739,7 +1739,7 @@ if __name__ == "__main__":
 \paragraph{} We can set our Flask app up to record interesting happenings into a text file so that we have a log to inspect if something bad occurs. This is actually a feature of the Python language rather than a Flask feature, but is an important part of building a real world app. First we need to make some additions to our config file, e.g.
 
 \begin{lstlisting}
-[loggingapp]
+[config]
 debug =  True
 ip_address = 0.0.0.0
 port = 5000
