Fix #3 missing end of line

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1984,7 +1984,7 @@ Now let's use Flask to add some basic styling to that ugly old page.
 <html>
 <head>
   <title>Bootstrap Demonstation</title>
-  <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="st
+  <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
 </head>
 <body>
 <h1>HELLO</h1>
