Clarification about loggingapp config filename

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1736,7 +1736,7 @@ if __name__ == "__main__":
 
 \section{Logging}
 \label{logging}
-\paragraph{} We can set our Flask app up to record interesting happenings into a text file so that we have a log to inspect if something bad occurs. This is actually a feature of the Python language rather than a Flask feature, but is an important part of building a real world app. First we need to make some additions to our config file, e.g.
+\paragraph{} We can set our Flask app up to record interesting happenings into a text file so that we have a log to inspect if something bad occurs. This is actually a feature of the Python language rather than a Flask feature, but is an important part of building a real world app. First we need to make some additions to our config file, named `logging.cfg' and stored in the  `etc' folder:
 
 \begin{lstlisting}
 [config]
