Update chapter 6 after fixing message flashing

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1702,14 +1702,14 @@ app.secret_key = 'supersecret'
 def index():
     return render_template('index.html')
 
-    return "Root Page"
-
+@app.route('/login/')
 @app.route('/login/<message>')
-def login(message):
+def login(message=None):
     if (message != None):
-      flash(message)
-    flash("A default message")
-    return "Let's pretend you just logged in"
+        flash(message)
+    else:
+        flash(u'A default message')
+    return redirect(url_for('index'))
 
 if __name__ == "__main__":
     app.run(host='0.0.0.0', debug=True)
@@ -1723,7 +1723,7 @@ if __name__ == "__main__":
   {% if messages %}
     <ul>
     {% for message in messages %}
-      <li>{{ message | safe}}</li>
+      <li>{{ message | safe }}</li>
     {% endfor %}
     </ul>
   {% endif %}
