fix typo in chapter 1

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -145,7 +145,7 @@
 \label{lab1}
 \paragraph{} Because Linux is one of the most widespread operating systems found on web-servers it makes sense for us to use a form of Linux as our learning environment on this \emph{Advanced} web technologies module. There are a lot of different versions of Linux, known as distributions or distros, and you might have heard or or even used some of them, for example, Debian or Ubuntu. Because we could spend an entire year learning about Linux we shall use a deliberately simplified version of a Linux environment which mimics many of the features found in a full Linux distibution. We shall also ignore many aspects, such as administration of Linux servers, so that we can focus on using Linux within the context of web-development. Our focus will be on the development of web-apps and an in depth investigation of what happens on the server side. That said, whilst we won't focus as much on the client, there is plenty of scope within the courseworks to put into practise your previous learning from the Web Techologies module from last year to make things pretty and provide a better user experience.
 
-\paragraph{} There will be a number of core steps involved in getting acquinted with the learning environment:
+\paragraph{} There will be a number of core steps involved in getting acquainted with the learning environment:
 
 \begin{enumerate}
 \item Levinux - Our self-contained, virtualised Linux server which runs within Windows (or on OS X or even under Linux itself)
