--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -608,7 +608,7 @@ print "Hello Napier"
 
 \paragraph{} Congratulations. Another first. You just ran your very first Python script. All we will really do from now on in the remainder of this module is build on top of this basic script in order to build our own web-apps. However, we shall have some help along the way from some really excellent libraries so don't worry, we shan't build everything from scratch.
 
-\paragraph{} Now the best thing to do is to learn some Python syntax by exploring som of the excellent online `learn Python' tutorials that are available. Some of them are interactive, so you can type directly into the web-site and get results. Others just give you exercises to do yourself and you can do those exercises in Python on our Levinux platform. Here are a few, in order of usefulness according to me, but many more are just a Google search away:
+\paragraph{} Now the best thing to do is to learn some Python syntax by exploring some of the excellent online `learn Python' tutorials that are available. Some of them are interactive, so you can type directly into the web-site and get results. Others just give you exercises to do yourself and you can do those exercises in Python on our Levinux platform. Here are a few, in order of usefulness according to me, but many more are just a Google search away:
 
 \begin{enumerate}
 \item Learn Python the hard way: \url{http://learnpythonthehardway.org/book/}
