Remove reference to installing the environment

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -511,7 +511,7 @@ There is also a cribsheet of useful commands in section \ref{cribsheet_vim}.
 
 \end{framed}
 
-\paragraph{} Once you have gone through the steps in section \ref{installing_environment} you will already have Git installed in Levinux. In order to use it we have to do a couple of things. Log into Levinux then do the following (obviously replace my email address and name with your own):
+\paragraph{} Git is already installed in our learning environment, whether Levinux or the set09103VM. In order to use it we have to do a couple of things. Log into Levinux then do the following (obviously replace my email address and name with your own):
 \begin{lstlisting}[style=DOS]
     $ git config --global user.email "s.wells@napier.ac.uk"
     $ git config --global user.name "Simon Wells"
